@@ -4,21 +4,28 @@
 
 	Requirements
 	""""""""""""
-		latest Evas from cvs  (module evas)
-		[latest] esound [form cvs]  (module esound)
+		latest Evas from cvs  (module 'evas')
+		[latest] esound [from cvs]  (module 'esound')
 		  (older could work too..)
 
 		-> http://www.enlightenment.org/cvs.html
 	
-	Install (temp)
+	Install
 	"""""""
+		./autogen.sh
+		./configure
 		make
+		su
+		make install
 
 		-> that's it :)
 
 	Usage
 	"""""
-		./slets [<theme file>]
+		slets [<theme file>]
+			e.g. slets test.slets
+			-> will _only_ work in this dir because themes
+			   cannot have relative paths for now..
 
 		- click in the slot you want to put the icons
 		- click on 'rehash' if all your slots are full
@@ -26,6 +33,6 @@
 
 	BTW
 	"""
-		test.slets if an example theme file..
+		test.slets if an example theme file.. (see above)
 		You can put a '.sletrc' themefile in your
 		homedir if you want.
