@@ -1,0 +1,3 @@
+AUTOMAKE_OPTIONS = 1.4 foreign
+
+SUBDIRS = slets slethe
