@@ -1,0 +1,11 @@
+AUTOMAKE_OPTIONS = 1.4 foreign
+
+bin_PROGRAMS = slethe
+
+slethe_LDADD = ../slets/core.o
+
+slethe_SOURCES = gfx.h gfx.c \
+	view.h view.c \
+	theme.h theme.c \
+	main.h main.c
+
