@@ -1,0 +1,9 @@
+AUTOMAKE_OPTIONS = 1.4 foreign
+
+bin_PROGRAMS = slets
+
+slets_SOURCES = core.h core.c \
+	gfx.h gfx.c \
+	game.h game.c \
+	theme.h theme.c \
+	main.h main.c
